[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.4.4"
ipykernel = "^6.15.1"
pandas = "^1.4.3"
black = "^22.6.0"
flake8 = "^5.0.4"
jupyterlab-code-formatter = "^1.5.2"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
bigjson = "^1.0.9"
ijson = "^3.1.4"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
nbdime = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
